--- a/src/com/gmail/robmadeyou/compost/dialogs/AddNewLeafDialog.form
+++ b/src/com/gmail/robmadeyou/compost/dialogs/AddNewLeafDialog.form
@@ -84,7 +84,7 @@
                 </constraints>
                 <properties>
                   <editable value="true"/>
-                  <enabled value="false"/>
+                  <enabled value="true"/>
                   <name value="View"/>
                 </properties>
               </component>
@@ -113,6 +113,8 @@
                   <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <enabled value="true"/>
+                  <selected value="true"/>
                   <text value=""/>
                 </properties>
               </component>
