Tidied up the new Leaf creation, and position dialog correctly

--- a/src/com/gmail/robmadeyou/compost/dialogs/AddNewLeafDialog.form
+++ b/src/com/gmail/robmadeyou/compost/dialogs/AddNewLeafDialog.form
@@ -97,7 +97,7 @@
                 <properties>
                   <editable value="true"/>
                   <enabled value="false"/>
-                  <name value="Model"/>
+                  <name value="LeafModel"/>
                 </properties>
               </component>
               <component id="8cad4" class="javax.swing.JCheckBox" binding="modelCheckBox">
