--- a/src/com/gmail/robmadeyou/compost/dialogs/AddNewLeafDialog.form
+++ b/src/com/gmail/robmadeyou/compost/dialogs/AddNewLeafDialog.form
@@ -96,7 +96,7 @@
                 </constraints>
                 <properties>
                   <editable value="true"/>
-                  <enabled value="false"/>
+                  <enabled value="true"/>
                   <name value="LeafModel"/>
                 </properties>
               </component>
@@ -105,6 +105,7 @@
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <selected value="true"/>
                   <text value=""/>
                 </properties>
               </component>
